# geeks-python-exercise

./: age_calculator.py  dailyChallenge.py  day2-challange-dictionaries.py  day3-exercises-oop.py  day4-oop-daily-challenge-pagination  day5-miniProj-daily-challenge-circle.py  exerciseGolde.py
week_1/day_1/daily_challenge/: daily_challenge.py  daily_challenge_gold.py
week_1/day_1/exercises-xp-ninja/: exercises-xp-ninja.py
week_1/day_1/exercises_xp/: exercises_xp.py
week_1/day_1/exercises_xp_gold/: exercises_xp_gold.py
week_1/day_2/daily_challenge/: daily_challenge_dictionaries.py
week_1/day_2/exercises_xp/: exercises_xp.py
week_1/day_2/exercises_xp /: exercises_xp.py
week_1/day_2/exersices-xp-gold/: exersices-xp-gold.py
week_1/day_2/exersices-xp-ninja/: exersices-xp-ninja.py
week_1/day_3/exercises-xp-ninja/: exercises-xp-ninja.py
week_1/day_3/exercises_xp/: exercises_xp.py
week_1/day_3/exersices-xp-gold/: exersices-xp-gold.py
week_1/day_4/Exercises XP Gold/: exercises-xp-gold.py
week_1/day_4/Exercises XP Ninja/: exercise-xp-ninja.py
week_1/day_4/exercises_xp/: exercises_xp.py
week_1/day_5/Mini-Project - Tic Tac Toe/: tictactoe.py
week_1/day_5/daily_challenge/: daily_challenge_circle.py
week_1/day_6/flask_mini_server/: README.md  main.py  pyproject.toml  requirements.txt  test-api.rest
week_2/day_1/daily-challenge/: daily-challenge.sql
week_2/day_1/exercises-xp/: exercises-xp.sql
week_2/day_1/exercises-xp-+/: exercises-xp-+.sql
week_2/day_1/exercises-xp-gold/: exercises-xp-gold.sql
week_2/day_2/Exercises XP/: exercises-xp.py  (+1 more)
(+256 files in other folders)
