[project]
name = "flask-mini-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask>=3.1.2",
    "python-dotenv>=1.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flask]
app = "app:app"
debug = true